# llm-rag-agent-knowledgebase

./: .gitignore  Procurador.Web.csproj  Procurador.Web.nswag  Procurador.Web.sln  Program.cs  README.md  _Imports.razor
Layout/: NavMenu.razor
Src/Layout/: MainLayout.razor
Src/Pages/: Index.razor
Src/Pages/Chat/: ChatComponent.razor  ChatComponent.razor.cs
api/: README.md
api/app/: checkpoints_memory.db  checkpoints_memory.sqlite  pyproject.toml
api/app/lab/: agent_rag.ipynb  agent_rag_2.ipynb  ingest_weaviate.ipynb  langgraph_agent_rag_example.ipynb  langgraph_agent_rag_example_2.ipynb  testsqlite.ipynb
api/app/procurador/: config.py  main.py  models.py
api/app/procurador/agents/: agent_basic.py  agent_rag.py
api/app/procurador/services/: ingest.py  llm.py  vectorstore.py
app/: pyproject.toml
app/app/: AgentReflectiveRetrieval.py  agent.py  agentBasic.py  embeddings.py  ingest.py  llm.py  main.py  models.py  search.py  vectorstore.py  vectorstore_weavite.py
app/app/agents/: agent_basic.py  agent_reflective_retrieval.py
app/app/services/: ingest.py  llm.py  search.py  vectorstore.py
app/lab/: ingest.ipynb  langgraph_rag_agent_llama3_local copy.ipynb  process_query.ipynb
app/procurador/: main.py
app/procurador/agents/: agent_basic.py  agent_rag.py  agent_reflective_retrieval.py
app/procurador/services/: ingest.py  search.py
weaviate/: docker-compose.yml
web/: .gitignore  Procurador.Web.nswag  README.MD
web/Properties/: launchSettings.json
web/wwwroot/: index.html
wwwroot/: appsettings.json  index.html
(+12 files in other folders)
